--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,13 @@ config.json
 
 .venv2/
 .aider*
+
+Sean Lynch-Test Company-config.json
+
+Sean Lynch-Test Company-Cover Letter-2025-01-13.docx
+
+Sean Lynch-Test Company-Cover Letter.docx
+
+take1_Sean Lynch-Test Company-config.json
+
+take2_Sean Lynch-Test Company-config.json
