--- a/.gitignore
+++ b/.gitignore
@@ -171,18 +171,8 @@ cython_debug/
 .pypirc
 .aider.*
 config.json
-
 .idea/
-
 .venv2/
 .aider*
+mainDev.py
 
-Sean Lynch-Test Company-config.json
-
-Sean Lynch-Test Company-Cover Letter-2025-01-13.docx
-
-Sean Lynch-Test Company-Cover Letter.docx
-
-take1_Sean Lynch-Test Company-config.json
-
-take2_Sean Lynch-Test Company-config.json
